--- a/package.json
+++ b/package.json
@@ -1,17 +1,29 @@
 {
     "name": "pure-vanilla-extract",
-    "version": "1.0.0",
-    "main": "index.js",
+    "description": "a css-to-object function for use with @vanilla-extract.",
+    "version": "0.0.1",
     "license": "MIT",
     "type": "module",
+    "scripts": {
+        "build": "tsc",
+        "dev": "vite"
+    },
     "devDependencies": {
+        "@styled/typescript-styled-plugin": "^1.0.1",
+        "@types/stylis": "^4.2.5",
         "@typescript-eslint/eslint-plugin": "^6.18.1",
         "@typescript-eslint/parser": "^6.18.1",
+        "@vanilla-extract/css": "^1.14.0",
+        "@vanilla-extract/css-utils": "^0.1.3",
+        "@vanilla-extract/vite-plugin": "^3.9.3",
+        "csstype": "^3.1.3",
         "eslint": "^8.56.0",
         "prettier": "^3.2.2",
-        "typescript": "^5.3.3"
+        "stylis": "^4.3.1",
+        "typescript": "^5.3.3",
+        "vite": "^5.0.11"
     },
     "dependencies": {
-        "@vanilla-extract/css": "^1.14.0"
+        "esbuild": "^0.19.11"
     }
 }
