--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
         "csstype": "^3.1.3",
         "eslint": "^8.56.0",
         "prettier": "^3.2.2",
-        "stylis": "^4.3.1",
         "typescript": "^5.3.3",
         "vite": "^5.0.11"
+    },
+    "dependencies": {
+        "stylis": "^4.3.1"
     }
 }
