fix: module imports and readme

--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
     "name": "pure-vanilla-extract",
     "description": "a css-to-object function for use with @vanilla-extract.",
-    "version": "0.0.1",
+    "version": "0.0.5",
     "license": "MIT",
+    "module": "./dist/index.js",
     "type": "module",
     "scripts": {
         "build": "tsc",
         "dev": "vite"
     },
+    "exports": {
+        ".": {
+            "default": "./dist/index.js",
+            "import": "./dist/index.js"
+        }
+    },
+    "files": [
+        "/dist"
+    ],
     "devDependencies": {
         "@types/stylis": "^4.2.5",
         "@typescript-eslint/eslint-plugin": "^6.18.1",
@@ -23,5 +33,9 @@
     },
     "dependencies": {
         "stylis": "^4.3.1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/zisiszak/pure-vanilla-extract.git"
     }
 }
