--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
     "name": "pure-vanilla-extract",
-    "description": "a css-to-object function for use with @vanilla-extract.",
-    "version": "0.0.5",
+    "description": "A css-to-object function for use with @vanilla-extract (plus some misc. utils)",
+    "version": "0.0.6",
+    "author": {
+        "name": "Zisis Zak",
+        "url": "https://github.com/zisiszak"
+    },
     "license": "MIT",
-    "module": "./dist/index.js",
+    "module": "./dist/esm/index.js",
     "type": "module",
     "scripts": {
-        "build": "tsc",
+        "build:clean": "rm -rf ./dist",
+        "compile": "tsc -b ./tsconfig.cjs.json ./tsconfig.esm.json ./tsconfig.types.json",
+        "build": "yarn build:clean && yarn compile",
         "dev": "vite"
     },
     "exports": {
         ".": {
-            "default": "./dist/index.js",
-            "import": "./dist/index.js"
+            "types": "./dist/types/index.d.ts",
+            "require": "./dist/cjs/index.js",
+            "default": "./dist/cjs/index.js",
+            "import": "./dist/esm/index.js"
         }
     },
     "files": [
-        "/dist"
+        "./dist"
     ],
     "devDependencies": {
         "@types/stylis": "^4.2.5",
@@ -31,6 +39,10 @@
         "typescript": "^5.3.3",
         "vite": "^5.0.11"
     },
+    "peerDependencies": {
+        "@vanilla-extract/css": "^1.14.0"
+    },
+    "bundleDependencies": true,
     "dependencies": {
         "stylis": "^4.3.1"
     },
