--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,24 +2,21 @@
     "compileOnSave": false,
     "compilerOptions": {
         "target": "ES2020",
-        "module": "ES2020",
-        "lib": ["ES2020", "DOM"],
-
+        "module": "NodeNext",
+        "lib": ["ES2020"],
         "strict": true,
-
-        "noEmit": false,
         "outDir": "./dist",
         "rootDir": "./src",
-
+        "noEmit": true,
         "removeComments": true,
+        "moduleDetection": "auto",
+        "moduleResolution": "NodeNext",
 
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
         "forceConsistentCasingInFileNames": true,
-        // "skipLibCheck": true,
         "skipDefaultLibCheck": true,
         "isolatedModules": true,
-        "moduleResolution": "Bundler",
 
         "noUnusedLocals": true,
         "noUnusedParameters": true,
@@ -28,10 +25,8 @@
         "noImplicitAny": true,
         "noImplicitThis": true,
         "strictNullChecks": true,
-        "strictFunctionTypes": true,
-        "composite": true
+        "strictFunctionTypes": true
     },
-    // "exclude": ["reference", "dist", "css.css.ts"],
-    // "include": ["src"]
-    "files": ["src/index.ts", "src/types.ts", "src/css.ts"]
+    "include": ["src"],
+    "exclude": ["**/*.css.ts", "**/_*.ts", "**/dist/**", "node_modules"]
 }
