--- a/tsconfig.vite.json
+++ b/tsconfig.vite.json
@@ -3,6 +3,7 @@
         "target": "ES2020",
         "module": "ESNext",
         "composite": true,
+        "noEmit": true,
         "skipDefaultLibCheck": true,
         "moduleResolution": "bundler",
         "allowSyntheticDefaultImports": true
